--- a/admin/index.html
+++ b/admin/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <title>IHS DECA Admin</title>
     <meta name="robots" content="noindex" />
+
+    <!-- Decap CMS UI -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
+    <!-- Netlify Identity widget (required for Git Gateway login) -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
