--- a/admin/index.html
+++ b/admin/index.html
@@ -5,11 +5,24 @@
     <title>IHS DECA Admin</title>
     <meta name="robots" content="noindex" />
 
-    <!-- Decap CMS UI -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <!-- Load after DOM so CMS can attach safely -->
+    <script defer src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-    <!-- Netlify Identity widget (required for Git Gateway login) -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <style>
+      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 24px; }
+      .fallback { max-width: 520px; margin: 10vh auto; text-align: center; color: #334155; }
+      .btn { display:inline-block; padding:10px 14px; border-radius:12px; border:1px solid #cbd5e1; cursor:pointer; }
+    </style>
   </head>
-  <body></body>
-</html>
+  <body>
+    <div class="fallback">
+      <h1>IHS DECA Admin</h1>
+      <p>If you do not see the editor, click Log in.</p>
+      <button id="loginBtn" class="btn">Log in</button>
+    </div>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const btn = document.getElementById('loginBtn');
+        if (btn) btn.addEventListener('click', () =>
